feat(openapi): add properties to the OpenAPI contract
